ZGC: Generational
Co-authored-by: Stefan Karlsson <stefank@openjdk.org>
Co-authored-by: Per Liden <pliden@openjdk.org>
Co-authored-by: Albert Mingkun Yang <ayang@openjdk.org>
Co-authored-by: Erik Österlund <eosterlund@openjdk.org>
Co-authored-by: Axel Boldt-Christmas <aboldtch@openjdk.org>
Co-authored-by: Stefan Johansson <kstefanj@openjdk.org>